# Huffman

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  ConsoleApplication.cpp  FileCompressor.cpp  FileCompressor.h
lib/: CMakeLists.txt  Decryptor.cpp  Decryptor.h  Encryptor.cpp  Encryptor.h
tests/: CMakeLists.txt  huffman_testing.cpp
tests/gtest/: gtest-all.cc  gtest.h  gtest_main.cc
